{
  "version": 4,
  "terraform_version": "1.10.3",
  "serial": 184,
  "lineage": "4f43018e-7288-49ea-e6d4-29091414911f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "listflow_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e2c8caa4b6378d8c",
            "arn": "arn:aws:ec2:us-east-1:104733724423:instance/i-02b9c2693eb41a22c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02b9c2693eb41a22c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-038b963458262f197",
            "private_dns": "ip-10-0-0-125.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.125",
            "public_ip": "34.205.172.159",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-058d48fdeec958268",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0edf16d9f14d55305",
            "tags": {
              "Name": "listflow_server"
            },
            "tags_all": {
              "Name": "listflow_server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e0c187f5f63a2b59"
            ]
          },
          "dependencies": [
            "aws_security_group.listflow_sg",
            "aws_subnet.listflow_subnet",
            "aws_vpc.listflow_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "listflow_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:104733724423:internet-gateway/igw-0b4f0cd4f593ae3e0",
            "id": "igw-0b4f0cd4f593ae3e0",
            "owner_id": "104733724423",
            "tags": {
              "Name": "listflow_igw"
            },
            "tags_all": {
              "Name": "listflow_igw"
            },
            "vpc_id": "vpc-0ec768c46953535f0"
          },
          "dependencies": [
            "aws_vpc.listflow_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "listflow_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:104733724423:route-table/rtb-07dd035533380a723",
            "id": "rtb-07dd035533380a723",
            "owner_id": "104733724423",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b4f0cd4f593ae3e0",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ec768c46953535f0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.listflow_igw",
            "aws_vpc.listflow_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "listflow_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cbfd14da7b3142a7",
            "route_table_id": "rtb-07dd035533380a723",
            "subnet_id": "subnet-0edf16d9f14d55305"
          },
          "dependencies": [
            "aws_internet_gateway.listflow_igw",
            "aws_route_table.listflow_rt",
            "aws_subnet.listflow_subnet",
            "aws_vpc.listflow_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "listflow_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:104733724423:security-group/sg-0e0c187f5f63a2b59",
            "description": "Web traffic and SSH",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e0c187f5f63a2b59",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP ingress",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SMTP ingress",
                "from_port": 587,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 587
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH ingress",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "listflow_sg",
            "name_prefix": "",
            "owner_id": "104733724423",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "listflow_sg"
            },
            "tags_all": {
              "Name": "listflow_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ec768c46953535f0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.listflow_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "listflow_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:104733724423:subnet/subnet-0edf16d9f14d55305",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0edf16d9f14d55305",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "104733724423",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "listflow_subnet"
            },
            "tags_all": {
              "Name": "listflow_subnet"
            },
            "vpc_id": "vpc-0ec768c46953535f0"
          },
          "dependencies": [
            "aws_vpc.listflow_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "listflow_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:104733724423:vpc/vpc-0ec768c46953535f0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-064c239b6647e8781",
            "default_route_table_id": "rtb-0d7f7893cf3ffe5c1",
            "default_security_group_id": "sg-0415150f99b925d90",
            "dhcp_options_id": "dopt-378fac50",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ec768c46953535f0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d7f7893cf3ffe5c1",
            "owner_id": "104733724423",
            "tags": {
              "Name": "listflow_vpc"
            },
            "tags_all": {
              "Name": "listflow_vpc"
            }
          }
        }
      ]
    }
  ]
}